# trie_benches

./: .gitignore  Cargo.toml  README.md
benches/: experiment1.rs  experiment2.rs  experiment3.rs  experiment4.rs  filling.rs  hashmap.rs  linear.rs  lookup.rs  sozu.rs  unknown_lookup.rs
examples/: experiment1.rs  experiment2.rs  lookup.rs  sozu.rs
src/: experiment10_hashmap_siphash.rs  experiment1_trie.rs  experiment2_trie.rs  experiment3_trie.rs  experiment4_fst.rs  experiment4_loop.rs  experiment5_trie_bitvec.rs  experiment6_fst_bitvec.rs  experiment7_regexset.rs  experiment9_hashmap.rs  gen_seed.rs  hashmap.rs  lib.rs  linear.rs  seed.rs  sozu_trie.rs
src/experiment8_trie_cursor/: cursor.rs  mod.rs  trie.rs
