[package]
name = "trie"
version = "0.1.0"
authors = ["NotBad4U <alessio.coltellacci@clever-cloud.com>"]

[dependencies]
rand = "0.4"

[dependencies.uuid]
version = "~0.2.0"
features = ["v4"]

[[bench]]
name = "sozu"
harness = false

[[bench]]
name = "experiment1"
harness = false

[[bench]]
name = "experiment2"
harness = false

[[bench]]
name = "experiment3"
harness = false

[[bench]]
name = "experiment4"
harness = false

[dev-dependencies]
criterion = "0.1.2"

[profile.release]
debug = true
